--- a/styles.css
+++ b/styles.css
@@ -22,15 +22,29 @@ body {
   position: relative;
   padding-top: 2%;
 }
-
-.titulo1 {
+header {
   text-align: center;
+  margin: 120px;
 }
 
+h2 {
+  text-align: center;
+}
+.about {
+  background-color: #fa7bb0;
+  border-radius: 58px 0px 96px 0px;
+  margin-bottom: 50px;
+}
 article {
   display: flex;
   align-items: center;
   margin-top: 20px;
+  color: #25282b;
+
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px; /* 175% */
 }
 .project-content {
   padding: 20px; /* Adicione o espaçamento desejado */
@@ -56,4 +70,72 @@ blockquote {
 }
 cite {
   font-size: 13px;
+}
+
+.buttonsource {
+  display: inline-flex;
+  padding: 5px 6px;
+  align-items: flex-start;
+  gap: 10px;
+  border-radius: 5px;
+  border: 2px solid #fa7bb0;
+  text-decoration: none;
+  color: #fa7bb0;
+}
+
+.buttonview {
+  text-decoration: none;
+  display: inline-flex;
+  padding: 5px 6px;
+  align-items: flex-start;
+  gap: 10px;
+  border-radius: 5px;
+  border: 2px solid #fa7bb0;
+  color: #fbf8f1;
+
+  background: #fa7bb0;
+}
+.buttonmail {
+  text-decoration: none;
+  display: inline-flex;
+  padding: 5px 6px;
+  align-items: flex-start;
+  gap: 10px;
+  border-radius: 5px;
+  border: 2px solid #000000;
+  color: #000000;
+  margin-bottom: 8px;
+}
+
+ul {
+  display: flex;
+  list-style-type: none;
+  justify-content: center;
+  padding: 0;
+}
+.icones-socialmedia {
+  max-width: 50px;
+  padding: 10px 10px;
+}
+
+.contact {
+  text-align: center;
+}
+
+.contact-background {
+  margin-top: 90px;
+  background-color: #fa7bb0;
+  border-radius: 13px 120px;
+}
+
+.text-contact {
+  text-align: left;
+}
+
+footer {
+  text-align: center;
+  border: dotted;
+  border-width: 6px 2px;
+  border-radius: 13px 120px;
+  border-color: #fa7bb0;
 }
