--- a/styles.css
+++ b/styles.css
@@ -183,3 +183,20 @@ footer {
   border-radius: 13px 120px;
   border-color: var(--color-primary);
 }
+
+.heading {
+  position: relative;
+  text-align: center;
+  padding-bottom: 5px;
+}
+
+.heading::after {
+  content: "";
+  position: absolute;
+  width: 56px;
+  border: 2px solid var(--color-secondary);
+  top: 100%;
+  transform: translateX(-50%);
+  left: 50%;
+  border-radius: 21px;
+}
